edit carousel controls

--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
 			<div class="highlighted"></div>
 
 			<!-- div con le miniature -->
-			<div class="thumbs">
-				<div class="controls">
-					<i class="bi bi-arrow-up-circle-fill btn btn-prev"></i>
-					<i class="bi bi-arrow-down-circle-fill btn btn-next"></i>
-				</div>
+			<div class="thumbs"></div>
+			<div class="controls">
+				<i class="bi bi-arrow-up-circle-fill btn btn-prev"></i>
+				<i class="bi bi-arrow-down-circle-fill btn btn-next"></i>
 			</div>
             <!-- <img src="img/01.webp" alt=""> -->
 		</div>
